# IB_labs

./: LICENSE  README.md  scheme.json  scheme.yaml
aar/: AccelerometerHash.aar
aar/app/src/main/java/Dima00138/accelerometrhash/: AccelerometrHash.kt
app/: README.md
app/.openapi-generator/: FILES
app/api/: openapi.yaml
app/docs/: ApiResponse.md  Message.md  Tag.md  User.md  message_api.md  user_api.md
app/examples/client/: main.rs
app/examples/server/: server.rs
app/src/: lib.rs  models.rs
app/src/client/: mod.rs
app/src/server/: mod.rs
flutter/: pubspec.yaml
flutter/android/app/src/main/kotlin/com/example/IB_FlutterAAR/: MainActivity.kt
flutter/lib/: accelerometer_service.dart  main.dart
haproxy/: dockerfile  domain.key  haproxy.cfg  ruc.pem
server-messages/: .gitignore  Cargo.toml
server-messages/src/: main.rs  setup.rs
server-messages/src/entities/: user.rs
tls/: dockerfile  package-lock.json  server.js
tls/cert/: certificate.crt  certificate.srl  domain.crt  domain.csr  privateKey.key  ruc.csr  ruc.key  ruc.srl
